--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "equipe-foot",
+  "name": "tp-article",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,22 +21,19 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
-    "@ckeditor/ckeditor5-angular": "^1.1.2",
-    "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
-    "json-cyclic": "0.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.17",
+    "@angular-devkit/build-angular": "^0.803.19",
     "@angular/cli": "~8.3.17",
     "@angular/compiler-cli": "~8.2.13",
     "@angular/language-service": "~8.2.13",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
